tests/parser/parse-continue.4.bad.coalton
;; BAD: Parse Continue
(package test-parser)

(define f
  (loop
    (let ((continuer (fn () (continue))))
      (continuer))))
